[gd_scene load_steps=3 format=3 uid="uid://bxk2v4m3x1cx6"]

[ext_resource type="PackedScene" uid="uid://dqkqd11wajc8k" path="res://scenes/Background.tscn" id="1_bg"]
[ext_resource type="Script" path="res://scripts/HomeScreen.gd" id="2_home"]

[node name="HomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_home")

[node name="Background" parent="." instance=ExtResource("1_bg")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="GameTitle" type="Label" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "FLAPPY BIRD"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="HighScoreLabel" type="Label" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Best Score: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="StartButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "START GAME"

[node name="ShopButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "SHOP"

[node name="Spacer3" type="Control" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="Instructions" type="Label" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Use SPACE or CLICK to flap
Avoid the pipes!"
horizontal_alignment = 1